--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=340, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="IPTV Player powered by Bugsfree">
-    <meta name="theme-color" content="#1e90ff">    
+    <meta name="theme-color" content="#1e90ff">  
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  
     <title>Web IPTV Player| Watch your Favorites TV channels, Series and Movies here! </title>
     <base href="./">
     <link rel="stylesheet" href="./css/styles.css">
